--- a/.github/workflows/android-master.yml
+++ b/.github/workflows/android-master.yml
@@ -19,4 +19,4 @@ jobs:
         with:
           java-version: 1.8
       - name: Ktlint
-        run: bash ./gradlew ktlintCheck
+        run: bash ./gradlew ktlint
