--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,6 +96,7 @@ dependencies {
 fork {
     title = "My acceptance tests"
     testPackage = "com.github.tarcv.orderme.app.ui.tests"
+    testOutputTimeout = 120000
     poolingStrategy {
         computed {
             characteristic = "sw"
