--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-core-utils'
     }
 
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.3.0'
+
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
